custom-resource/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus
  namespace: prometheus
spec:
  mtls:
    mode: DISABLE
