custom-resource/virtualservice-prometheus.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
spec:
  gateways:
  - '$ISTIO_INGRESS_GATEWAY'
  hosts:
  - '$ISTIO_HOST'
  http:
  - match:
    - uri:
        prefix: /prometheus/
    name: http
    rewrite:
      uri: /
    route:
    - destination:
        host: prometheus-kube-prometheus-prometheus.prometheus.svc.cluster.local
        port:
          number: 9090
      weight: 100
